{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 4689,
  "lineage": "894b14e6-388c-4842-355a-bb622112abab",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "k8s_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-088e48f7ee7ff768d",
            "description": "default-allow-all-traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "k8s-vpn-sg"
                ]
              }
            ],
            "id": "sg-088e48f7ee7ff768d",
            "name": "default-allow-all-traffic",
            "tags": {
              "Name": "k8s-vpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-013e678bbcfc095eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.208.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-1(real)"
                ]
              }
            ],
            "id": "subnet-013e678bbcfc095eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1(real)"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-0c5c1d3025c08f622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 244,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet"
                ]
              }
            ],
            "id": "subnet-0c5c1d3025c08f622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-057b93341bbdc3480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 8185,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-1"
                ]
              }
            ],
            "id": "subnet-057b93341bbdc3480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet_public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-043e9f72211503059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.224.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-forALB"
                ]
              }
            ],
            "id": "subnet-043e9f72211503059",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-forALB"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "dattran_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:vpc/vpc-03ed3e188a71dc9c6",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02cd218d15d068ecf",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0afb412ab1a4fa4b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "dattran-vpc"
                ]
              }
            ],
            "id": "vpc-03ed3e188a71dc9c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555f9a0fe4203f4b",
            "owner_id": "296725355870",
            "tags": {
              "Name": "dattran-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0d02b11426f781a9e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0d02b11426f781a9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e3a5dee3a278149",
            "private_dns": "ip-10-0-1-105.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-47-129-184-1.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.184.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0756bbbe7b1bfe437",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-044d6545a62494a84"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5c1d3025c08f622",
            "tags": {
              "Name": "k8s_master"
            },
            "tags_all": {
              "Name": "k8s_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044d6545a62494a84"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0b26322b8fab8855a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0b26322b8fab8855a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b746b9fefe928bd6",
            "private_dns": "ip-10-0-222-48.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.222.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3aae2be93cd9399",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-044d6545a62494a84"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_master_2"
            },
            "tags_all": {
              "Name": "k8s_master_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044d6545a62494a84"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-06d56206499ef4a18",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-06d56206499ef4a18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b3f8f6ab610e6cd",
            "private_dns": "ip-10-0-209-3.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.209.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016edec561dd8db43",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-031332575adcf60d2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031332575adcf60d2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-09d091de24bd99a4b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-09d091de24bd99a4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04194d6ae6464594b",
            "private_dns": "ip-10-0-217-209.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.217.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01a0dc61e33744943",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-031332575adcf60d2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031332575adcf60d2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-08f168b02e0f1b6a3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f168b02e0f1b6a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072346cca751b5dab",
            "private_dns": "ip-10-0-1-39.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-18-143-175-229.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.175.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ec46c144d82c8b1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0de9252db7a1cbe98"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5c1d3025c08f622",
            "tags": {
              "Name": "k8s_nginx_lb"
            },
            "tags_all": {
              "Name": "k8s_nginx_lb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de9252db7a1cbe98"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.k8s",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-063d37a3c74d9c996",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-063d37a3c74d9c996",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009f777ccdd46c341",
            "private_dns": "ip-10-0-210-130.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.210.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09a4db75f76b0472c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-095cd42b4f05d2cc3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-0"
            },
            "tags_all": {
              "Name": "k8s_worker-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095cd42b4f05d2cc3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-07985cebf14c86801",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-07985cebf14c86801",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a52f4d9f3e04531",
            "private_dns": "ip-10-0-211-199.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.211.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d49ef3ee65ce3120",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-095cd42b4f05d2cc3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-1"
            },
            "tags_all": {
              "Name": "k8s_worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095cd42b4f05d2cc3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0ec4dd396d20568f5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0ec4dd396d20568f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0813cdc1720fa0e5b",
            "private_dns": "ip-10-0-210-38.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.210.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3821c074f2851f3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-095cd42b4f05d2cc3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-2"
            },
            "tags_all": {
              "Name": "k8s_worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095cd42b4f05d2cc3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "k8s_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/00a103a7fcbc0eca",
            "arn_suffix": "app/k8s-lb/00a103a7fcbc0eca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-lb-2025999133.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/00a103a7fcbc0eca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de9252db7a1cbe98"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043e9f72211503059"
              },
              {
                "subnet_id": "subnet-057b93341bbdc3480"
              },
              {
                "subnet_id": "subnet-0c5c1d3025c08f622"
              }
            ],
            "subnets": [
              "subnet-043e9f72211503059",
              "subnet-057b93341bbdc3480",
              "subnet-0c5c1d3025c08f622"
            ],
            "tags": {
              "Name": "k8s-main-alb"
            },
            "tags_all": {
              "Name": "k8s-main-alb"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_subnet.dattran_subnet-1",
            "data.aws_subnet.dattran_subnet_public_alb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/00a103a7fcbc0eca/01724019895045b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/00a103a7fcbc0eca/01724019895045b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/00a103a7fcbc0eca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.k8s_alb",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_subnet.dattran_subnet-1",
            "data.aws_subnet.dattran_subnet_public_alb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/00a103a7fcbc0eca/dff889e43a7ed7d1",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:296725355870:certificate/87643691-0881-4975-8b25-d14a975d3afb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/00a103a7fcbc0eca/dff889e43a7ed7d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/00a103a7fcbc0eca",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb.k8s_alb",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_acm_certificate.default",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_subnet.dattran_subnet-1",
            "data.aws_subnet.dattran_subnet_public_alb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k8s_tg_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "arn_suffix": "targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf-20260505125705829300000009",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "target_id": "i-063d37a3c74d9c996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf-2026050512570591540000000b",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "target_id": "i-07985cebf14c86801"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf-2026050512570591540000000a",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/352fe798bd2c9fdf",
            "target_id": "i-0ec4dd396d20568f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-044d6545a62494a84",
            "description": "k8s master sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044d6545a62494a84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10248,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10260
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6783,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6783
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6784,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6784
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9252db7a1cbe98"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s_master_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_master_sg"
            },
            "tags_all": {
              "Name": "k8s_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-031332575adcf60d2",
            "description": "k8s nfs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031332575adcf60d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-044d6545a62494a84",
                  "sg-088e48f7ee7ff768d",
                  "sg-095cd42b4f05d2cc3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s_nfs",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-0de9252db7a1cbe98",
            "description": "k8s nginx lb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de9252db7a1cbe98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9991,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9991
              }
            ],
            "name": "k8s_nginx_lb_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_nginx_lb_sg"
            },
            "tags_all": {
              "Name": "k8s_nginx_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-095cd42b4f05d2cc3",
            "description": "k8s worker sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095cd42b4f05d2cc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10248,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10260
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6783,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6783
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6784,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6784
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de9252db7a1cbe98"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s_worker_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_worker_sg"
            },
            "tags_all": {
              "Name": "k8s_worker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-02fba72cc5a49da6b",
            "description": "nfs sg",
            "egress": [],
            "id": "sg-02fba72cc5a49da6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "nfs_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nfs_sg"
            },
            "tags_all": {
              "Name": "nfs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0cf585c50a3b7b174",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cf585c50a3b7b174",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0cf585c50a3b7b174",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0fcff1b6750737283",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fcff1b6750737283",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-031332575adcf60d2",
            "security_group_rule_id": "sgr-0fcff1b6750737283",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-036046ea64fbb8adb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-036046ea64fbb8adb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-036046ea64fbb8adb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-08869725f5943f112",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08869725f5943f112",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-08869725f5943f112",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ETCD",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-038d61d39d715f6df",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-038d61d39d715f6df",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-038d61d39d715f6df",
            "tags": null,
            "tags_all": {},
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ETCD_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0cd8c1195f5d7d14f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-0cd8c1195f5d7d14f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0cd8c1195f5d7d14f",
            "tags": null,
            "tags_all": {},
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-02215016e669db9e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02215016e669db9e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-02215016e669db9e2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-04721b04c675d0b38",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04721b04c675d0b38",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-04721b04c675d0b38",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-080664880fae99e6b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-080664880fae99e6b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-080664880fae99e6b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-027e88ee8b7069e09",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-027e88ee8b7069e09",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-027e88ee8b7069e09",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_8080_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d31c07e8e1566931",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0d31c07e8e1566931",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0d31c07e8e1566931",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-018ddc71294efd135",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-018ddc71294efd135",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-018ddc71294efd135",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NFS_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-05d19772a18db58cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-05d19772a18db58cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02fba72cc5a49da6b",
            "security_group_rule_id": "sgr-05d19772a18db58cc",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NodePort_Service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0b25f31caefd41752",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-0b25f31caefd41752",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0b25f31caefd41752",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NodePort_Service_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0030cd84fe1ce0f27",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-0030cd84fe1ce0f27",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0030cd84fe1ce0f27",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Rancher_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d6309c794614a265",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 444,
            "id": "sgr-0d6309c794614a265",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0d6309c794614a265",
            "tags": null,
            "tags_all": {},
            "to_port": 444
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Rancher_HTTPS_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0a13029e6a0e47d46",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 444,
            "id": "sgr-0a13029e6a0e47d46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-0a13029e6a0e47d46",
            "tags": null,
            "tags_all": {},
            "to_port": 444
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-040d029f6345843d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-040d029f6345843d2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-040d029f6345843d2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-067bdafdae8d48a9f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-067bdafdae8d48a9f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-067bdafdae8d48a9f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-097c96a0676505242",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-097c96a0676505242",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-097c96a0676505242",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d02b094a4c7ff916",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d02b094a4c7ff916",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-031332575adcf60d2",
            "security_group_rule_id": "sgr-0d02b094a4c7ff916",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0388a64d35de430fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0388a64d35de430fa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-044d6545a62494a84",
            "security_group_id": "sg-031332575adcf60d2",
            "security_group_rule_id": "sgr-0388a64d35de430fa",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-05f47eae2c6d4c91a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05f47eae2c6d4c91a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-088e48f7ee7ff768d",
            "security_group_id": "sg-031332575adcf60d2",
            "security_group_rule_id": "sgr-05f47eae2c6d4c91a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_security_group.k8s_vpn",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0920973ccf8fd4cbc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0920973ccf8fd4cbc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_id": "sg-031332575adcf60d2",
            "security_group_rule_id": "sgr-0920973ccf8fd4cbc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-033da2a138d9a4523",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-033da2a138d9a4523",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-033da2a138d9a4523",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0bf026d3ad72dcf34",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0bf026d3ad72dcf34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-0bf026d3ad72dcf34",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-03d8092befc769f29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9991,
            "id": "sgr-03d8092befc769f29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-03d8092befc769f29",
            "tags": null,
            "tags_all": {},
            "to_port": 9991
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-012eb1338deeceb30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-012eb1338deeceb30",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-012eb1338deeceb30",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_server_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-00bc870722ec32998",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-00bc870722ec32998",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-00bc870722ec32998",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_BE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-006fb88f236c8e1d0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8285,
            "id": "sgr-006fb88f236c8e1d0",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-006fb88f236c8e1d0",
            "tags": null,
            "tags_all": {},
            "to_port": 8285
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_BE_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d9e884e499087034",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8285,
            "id": "sgr-0d9e884e499087034",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0d9e884e499087034",
            "tags": null,
            "tags_all": {},
            "to_port": 8285
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_VXLAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0de96a5538b06d2b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-0de96a5538b06d2b6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0de96a5538b06d2b6",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_VXLAN_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-092c753ac3d3632d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-092c753ac3d3632d5",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-092c753ac3d3632d5",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_traffic_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0410b133bac6a3ee2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0410b133bac6a3ee2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0410b133bac6a3ee2",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_traffic_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0f9abe9b998fc9d21",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0f9abe9b998fc9d21",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0f9abe9b998fc9d21",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kube_api_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0fa0bb13d35978eab",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0fa0bb13d35978eab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-0fa0bb13d35978eab",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kubelet_and_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d5decc20034b36e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10248,
            "id": "sgr-0d5decc20034b36e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0d5decc20034b36e2",
            "tags": null,
            "tags_all": {},
            "to_port": 10260
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kubelet_and_control_plane_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0bae234959a0d670e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10248,
            "id": "sgr-0bae234959a0d670e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0bae234959a0d670e",
            "tags": null,
            "tags_all": {},
            "to_port": 10260
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nodePort",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-056e64aabdd819dda",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-056e64aabdd819dda",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de9252db7a1cbe98",
            "security_group_rule_id": "sgr-056e64aabdd819dda",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rancher_81",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-02aceeea1d90305d3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 81,
            "id": "sgr-02aceeea1d90305d3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-02aceeea1d90305d3",
            "tags": null,
            "tags_all": {},
            "to_port": 81
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0eff5993c9de5f5c6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6783,
            "id": "sgr-0eff5993c9de5f5c6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-0eff5993c9de5f5c6",
            "tags": null,
            "tags_all": {},
            "to_port": 6783
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_tcp_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-04aa75ed968e5bfb5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6783,
            "id": "sgr-04aa75ed968e5bfb5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-04aa75ed968e5bfb5",
            "tags": null,
            "tags_all": {},
            "to_port": 6783
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-03a7a3243f712a999",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6784,
            "id": "sgr-03a7a3243f712a999",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-044d6545a62494a84",
            "security_group_rule_id": "sgr-03a7a3243f712a999",
            "tags": null,
            "tags_all": {},
            "to_port": 6784
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_udp_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0c9b41a6e3067a2c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6784,
            "id": "sgr-0c9b41a6e3067a2c5",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095cd42b4f05d2cc3",
            "security_group_rule_id": "sgr-0c9b41a6e3067a2c5",
            "tags": null,
            "tags_all": {},
            "to_port": 6784
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    }
  ]
}